--- a/rms-donation-manager/src/main/resources/static/tables.html
+++ b/rms-donation-manager/src/main/resources/static/tables.html
@@ -50,7 +50,7 @@
 				<td>{{t.name}}</td>
 				<td>{{t.event}}</td>
 				<td>{{t.peopleInTable}}/{{t.peoplePerTable}}</td>
-				<td>{{t.peoplePerTable}}</td>
+				<td>{{t.peopleAtTable}}/{{t.peopleInTable}}</td>
 				<td>{{t.year}}</td>
 				<td><a ng-click="deleteTable(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 			</tr>
