--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -34,14 +34,14 @@
 	<table class="table table-striped">
 		<thead>
 			<tr>
-				<th>Ticket Number</a></th>
-				<th>Sold By</th>
+				<th>Ticket Number</th>
+				<th>Info</th>
 				<th>Bought By</th>
 				<th>Event</th>
 				<th>Table</th>
 				<th>Paid</th>
-				<th>Is At Event</th>
 				<th>From of Payment</th>
+				<th>Is At Event</th>
 				<th><a href="#!/newticket">+ Ticket</a></th>
 			</tr>
 		</thead>
@@ -49,13 +49,13 @@
 			<tr
 				ng-repeat="t in tickets | filter: searchKeyword ">
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a>
-				<td>{{t.soldBy}}</td>
+				<td>{{t.info}}</td>
 				<td>{{t.buyer}}</td>
 				<td>{{t.event}}</td>
 				<td>{{t.number}}</td>
 				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
-				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.atEvent" ng-disabled="true"/></td>
 				<td>{{t.formOfPayment}}</td>
+				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.atEvent" ng-disabled="true"/></td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
