--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -98,7 +98,7 @@
 								<th>Postal Code</th>
 								<th>Province</th>
 								<th>Country</th>
-								<th><a ng-hide="addPersonAddressElem" ng-click="getAddresses()">+ Address</a></th>
+								<th><a ng-hide="addPersonAddressElem" ng-click="setPaginatedAddresses(1)">+ Address</a></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -126,17 +126,51 @@
 								<th><a ng-click="addPersonAddress()" class="btn btn-small btn-primary">add</a></th>
 								<th><a ng-click="addPersonAddressElem=false" class="btn btn-small btn-primary">cancel</a></th>
 							</tr>
-							<tr ng-show="addPersonAddressElem" ng-repeat="a in addresses._embedded.addresses | filter: newPersonAddress.address">
-								<td><a ng-click="setPersonAddress(a)">{{a.address}}</a></td>
-								<td>{{a.address2}}</td>
-								<td>{{a.city}}</td>
-								<td>{{a.poBox}}</td>
-								<td>{{a.postalCode}}</td>
-								<td>{{a.province}}</td>
-								<td>{{a.country}}</td>
-							</tr>
 						</tbody>
 					</table>
+					<div ng-show="addPersonAddressElem" class="row">
+						<div class="form-group col-sm-6">
+							<label for="search" class="control-label">Search:</label> 
+						</div>
+					</div>
+					<div ng-show="addPersonAddressElem" class="row">
+						<div class="form-group col-sm-4">
+							<input type="text" class="form-control" ng-model="searchValue" placeholder="Insert address"/>
+						</div>
+						<div class="form-group col-sm-6">
+							<a ng-click="setPaginatedAddresses(1)" class="btn btn-small btn-primary">Search</a>
+						</div>
+					</div>
+					<table ng-show="addPersonAddressElem" class="table table-striped">
+						<tr ng-show="addPersonAddressElem" ng-repeat="a in addresses._embedded.addresses | filter: newPersonAddress.address">
+							<td><a ng-click="setPersonAddress(a)">{{a.address}}</a></td>
+							<td>{{a.address2}}</td>
+							<td>{{a.city}}</td>
+							<td>{{a.poBox}}</td>
+							<td>{{a.postalCode}}</td>
+							<td>{{a.province}}</td>
+							<td>{{a.country}}</td>
+						</tr>
+					</table>
+					<div class="text-center" ng-show="addPersonAddressElem">
+						<ul ng-if="addressPager.totalPages" class="pagination">
+						    <li ng-class="{disabled:addressPager.currentPage === 1}">
+						        <a ng-click="setPaginatedAddresses(1)">First</a>
+						    </li>
+						    <li ng-class="{disabled:addressPager.currentPage === 1}">
+						        <a ng-click="setPaginatedAddresses(addressPager.currentPage - 1)">Previous</a>
+						    </li>
+						    <li ng-repeat="page in addressPager.pages" ng-class="{active:addressPager.currentPage === page}">
+						        <a ng-click="setPaginatedAddresses(page)">{{page}}</a>
+						    </li>                
+						    <li ng-class="{disabled:addressPager.currentPage === addressPager.totalPages}">
+						        <a ng-click="setPaginatedAddresses(addressPager.currentPage + 1)">Next</a>
+						    </li>
+						    <li ng-class="{disabled:addressPager.currentPage === addressPager.totalPages}">
+						        <a ng-click="setPaginatedAddresses(addressPager.totalPages)">Last</a>
+						    </li>
+						</ul>
+					</div>
 				</div>
 			</form>
 		</div>
