#30 - GUIs for event search and event update added.
(The event statistics are included)

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -20,6 +20,7 @@
 <script src="scripts/pager.services.js"></script>
 <script src="scripts/price.services.js"></script>
 <script src="scripts/event.services.js"></script>
+<script src="scripts/event.controller.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
@@ -43,6 +44,7 @@
 					<li><a href="#!/tickets">Tickets</a></li>
 					<!-- <li><a href="#!/receipts">Receipts</a></li> -->
 					<li><a href="#!/sittingTables">Sitting Tables</a></li>
+					<li><a href="#!/events">Events</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span>
