#30,#28,#27,#24 - press enter key function added
Now when you press enter in the searches the respective function is
called

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -21,6 +21,7 @@
 <script src="scripts/price.services.js"></script>
 <script src="scripts/event.services.js"></script>
 <script src="scripts/event.controller.js"></script>
+<script src="scripts/directives.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
