--- a/rms-donation-manager/src/main/resources/static/ticket.html
+++ b/rms-donation-manager/src/main/resources/static/ticket.html
@@ -214,7 +214,7 @@
 					</div>
 					<div ng-show="addBuyerElem" class="row">
 						<div class="form-group col-sm-6">
-							<input type="text" class="form-control" ng-model="searchValue" placeholder="Insert name"/>
+							<input type="text" class="form-control" ng-model="searchValue" placeholder="Insert name" dl-enter-key="searchBuyer()"/>
 						</div>
 						<div class="form-group col-sm-6">
 							<a ng-click="searchBuyer()" class="btn btn-small btn-primary">Search</a>
