--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -21,6 +21,8 @@
 <script src="scripts/price.services.js"></script>
 <script src="scripts/event.services.js"></script>
 <script src="scripts/event.controller.js"></script>
+<script src="scripts/receipt.services.js"></script>
+<script src="scripts/receipt.controller.js"></script>
 <script src="scripts/directives.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
@@ -43,9 +45,9 @@
 					<li><a href="#!/address">Addresses</a></li>
 					<li><a href="#!/donations">Donations</a></li> -->
 					<li><a href="#!/tickets">Tickets</a></li>
-					<!-- <li><a href="#!/receipts">Receipts</a></li> -->
 					<li><a href="#!/sittingTables">Sitting Tables</a></li>
 					<li><a href="#!/events">Events</a></li>
+					<li><a href="#!/receipts">Receipts</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><span class="glyphicon glyphicon-user"></span>
