#33- PDF Generation working for individual receipts
Also, the option to select a desire year has been added

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -5,7 +5,9 @@
 <title>RMS Donation Manager</title>
 <script src="scripts/angular.min.js"></script>
 <script src="scripts/angular-route.js"></script>
+<script src="scripts/ui-bootstrap-tpls-2.5.0.min.js"></script>
 <script src="scripts/rms.dm.app.js"></script>
+<script src="scripts/jspdf.min.js"></script>
 <script src="scripts/person.controller.js"></script>
 <script src="scripts/new.person.controller.js"></script>
 <script src="scripts/ticket.controller.js"></script>
@@ -24,6 +26,7 @@
 <script src="scripts/receipt.services.js"></script>
 <script src="scripts/receipt.controller.js"></script>
 <script src="scripts/directives.js"></script>
+<script src="scripts/pdfGeneration.service.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
