--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <title>RMS Donation Manager</title>
 <script src="scripts/angular.min.js"></script>
 <script src="scripts/angular-route.js"></script>
-<script src="scripts/ui-bootstrap-tpls-2.5.0.min.js"></script>
+<script src="scripts/ui-bootstrap-2.5.0.min.js"></script>
 <script src="scripts/rms.dm.app.js"></script>
 <script src="scripts/jspdf.min.js"></script>
 <script src="scripts/person.controller.js"></script>
