--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -12,19 +12,20 @@
 <script src="scripts/new.person.controller.js"></script>
 <script src="scripts/ticket.controller.js"></script>
 <script src="scripts/new.ticket.controller.js"></script>
+<script src="scripts/table.controller.js"></script>
+<script src="scripts/new.table.controller.js"></script>
+<script src="scripts/organization.controller.js"></script>
+<script src="scripts/event.controller.js"></script>
+<script src="scripts/receipt.controller.js"></script>
 <script src="scripts/person.services.js"></script>
 <script src="scripts/address.services.js"></script>
 <script src="scripts/organization.services.js"></script>
 <script src="scripts/ticket.services.js"></script>
 <script src="scripts/table.services.js"></script>
-<script src="scripts/table.controller.js"></script>
-<script src="scripts/new.table.controller.js"></script>
 <script src="scripts/pager.services.js"></script>
 <script src="scripts/price.services.js"></script>
 <script src="scripts/event.services.js"></script>
-<script src="scripts/event.controller.js"></script>
 <script src="scripts/receipt.services.js"></script>
-<script src="scripts/receipt.controller.js"></script>
 <script src="scripts/directives.js"></script>
 <script src="scripts/pdfGeneration.service.js"></script>
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -44,8 +45,8 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#!/persons">People</a></li>
-					<!-- <li><a href="#!/organizations">Organizations</a></li>
-					<li><a href="#!/address">Addresses</a></li>
+					<li><a href="#!/organizations">Organizations</a></li>
+					<!-- <li><a href="#!/address">Addresses</a></li>
 					<li><a href="#!/donations">Donations</a></li> -->
 					<li><a href="#!/tickets">Tickets</a></li>
 					<li><a href="#!/sittingTables">Sitting Tables</a></li>
