#13- New organizations UI added and functioning

--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
 <script src="scripts/table.controller.js"></script>
 <script src="scripts/new.table.controller.js"></script>
 <script src="scripts/organization.controller.js"></script>
+<script src="scripts/new.organization.controller.js"></script>
 <script src="scripts/event.controller.js"></script>
 <script src="scripts/receipt.controller.js"></script>
 <script src="scripts/person.services.js"></script>
