--- a/rms-donation-manager/src/main/resources/static/person.html
+++ b/rms-donation-manager/src/main/resources/static/person.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
 	<h1 ng-hide="newPersonView">{{person.title}} {{person.firstName}} {{person.lastName}}</h1>
+	<h2 ng-show="newPersonView">New Person</h2>
 	<div class="panel panel-default">
 		<div class='well'>
 			<form name="personForm">
