#33- some alerts added to the UI

--- a/rms-donation-manager/src/main/resources/static/receipts.html
+++ b/rms-donation-manager/src/main/resources/static/receipts.html
@@ -30,7 +30,10 @@
 			</form>
 		</div>
 	</div>
-	
+	<div ng-show="showAlert" class="alert alert-{{alertKind}} alert-dismissible fade in">
+		<a ng-click="showAlert=false" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+		{{message}}
+	</div>
 	<div class="panel panel-default">
 		<div class="panel-body">
 			<form name="filterByYear">
