--- a/rms-donation-manager/src/main/resources/static/organization.html
+++ b/rms-donation-manager/src/main/resources/static/organization.html
@@ -111,7 +111,7 @@
 		</div>
 		<div class='well'>
 			<h2>People in the Organization</h2>
-			<form name="boughtByForm">
+			<form name="peopleInTheOrganizationForm">
 				<table class="table table-striped">
 					<thead>
 						<tr>
