--- a/rms-donation-manager/src/main/resources/static/receipt.html
+++ b/rms-donation-manager/src/main/resources/static/receipt.html
@@ -75,8 +75,8 @@
 									<td><input type="text" id="postalCode" class='form-control' ng-model="ra.postalCode" /></td>
 									<td><input type="text" id="province" class='form-control' ng-model="ra.province" /></td>
 									<td><input type="text" id="country" class='form-control' ng-model="ra.country" /></td>
-									<td><a ng-click="updateReceiptAddress(ra, $index)" class="btn btn-small btn-primary" ng-disabled="true">update</a></td>
 									<td><a ng-click="deleteReceiptAddress(ra._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
+									<td><a ng-hide="true" ng-click="updateReceiptAddress(ra, $index)" class="btn btn-small btn-primary" ng-disabled="true">update</a></td>
 								</ng-form>
 							</tr>
 							<tr ng-show="addReceiptAddressElem">
