--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -45,7 +45,7 @@
 				<th><a href="#!/newticket">+ Ticket</a></th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody ng-init="selectOptions = [{option : 'Cash'}, {option : 'Check'}, {option : 'Free'}]">
 			<tr
 				ng-repeat="t in tickets | filter: searchKeyword ">
 				<td><a ng-click="modifyTicket(t._links.self.href)">{{t.ticketNumber}}</a></td>
@@ -53,9 +53,13 @@
 				<td>{{t.buyer}}</td>
 				<td>{{t.event}}</td>
 				<td>{{t.number}}</td>
-				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-disabled="true"/></td>
-				<td>{{t.formOfPayment}}</td>
-				<td><input type="checkbox" id="atEvent" class='form-group' ng-model="t.atEvent" ng-disabled="true"/></td>
+				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-change="updateValue('paid', t.paid, t._links.self.href)"/></td>
+				<td>
+					<select ng-model="t.formOfPayment" class='form-control' ng-change="updateValue('formOfPayment', t.formOfPayment, t._links.self.href)">
+						<option ng-repeat="option in selectOptions" value="{{option.option}}">{{option.option}}</option>
+					</select>
+				</td>
+				<td><input type="checkbox" id="atEvent" class='form-group' ng-change="updateValue('atEvent', t.atEvent, t._links.self.href)" ng-model="t.atEvent"/></td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
