--- a/rms-donation-manager/src/main/resources/static/tickets.html
+++ b/rms-donation-manager/src/main/resources/static/tickets.html
@@ -30,7 +30,10 @@
 			</form>
 		</div>
 	</div>
-
+	<div ng-show="showAlert" class="alert alert-{{alertKind}} alert-dismissible fade in">
+		<a ng-click="showAlert=false" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+		{{message}}
+	</div>
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -53,13 +56,13 @@
 				<td>{{t.buyer}}</td>
 				<td>{{t.event}}</td>
 				<td>{{t.number}}</td>
-				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-change="updateValue('paid', t.paid, t._links.self.href)"/></td>
+				<td><input type="checkbox" id="paid" class='form-group' ng-model="t.paid" ng-change="updateValue('paid', t.paid, t._links.self.href, t.ticketNumber)"/></td>
 				<td>
-					<select ng-model="t.formOfPayment" class='form-control' ng-change="updateValue('formOfPayment', t.formOfPayment, t._links.self.href)">
+					<select ng-model="t.formOfPayment" class='form-control' ng-change="updateValue('formOfPayment', t.formOfPayment, t._links.self.href, t.ticketNumber)">
 						<option ng-repeat="option in selectOptions" value="{{option.option}}">{{option.option}}</option>
 					</select>
 				</td>
-				<td><input type="checkbox" id="atEvent" class='form-group' ng-change="updateValue('atEvent', t.atEvent, t._links.self.href)" ng-model="t.atEvent"/></td>
+				<td><input type="checkbox" id="atEvent" class='form-group' ng-change="updateValue('atEvent', t.atEvent, t._links.self.href, t.ticketNumber)" ng-model="t.atEvent"/></td>
 				<td><a ng-click="deleteTicket(t._links.self.href)" class="btn btn-small btn-primary">delete</a></td>
 
 			</tr>
