#45 The new Event GUI has been created

--- a/rms-donation-manager/src/main/resources/static/events.html
+++ b/rms-donation-manager/src/main/resources/static/events.html
@@ -38,7 +38,7 @@
 				<th>Year</th>
 				<th>Masters of Ceremony</th>
 				<th>Venue</th>
-				<th><a href="#!/newEvent">+ Event</a></th>
+				<th><a href="#!/newevent">+ Event</a></th>
 			</tr>
 		</thead>
 		<tbody>
