--- a/rms-donation-manager/src/main/resources/static/index.html
+++ b/rms-donation-manager/src/main/resources/static/index.html
@@ -2,34 +2,35 @@
 
 <html ng-app="rmsdmgui">
 <head>
-<title>RMS Donation Manager</title>
-<script src="scripts/angular.min.js"></script>
-<script src="scripts/angular-route.js"></script>
-<script src="scripts/ui-bootstrap-2.5.0.min.js"></script>
-<script src="scripts/rms.dm.app.js"></script>
-<script src="scripts/jspdf.min.js"></script>
-<script src="scripts/person.controller.js"></script>
-<script src="scripts/new.person.controller.js"></script>
-<script src="scripts/ticket.controller.js"></script>
-<script src="scripts/new.ticket.controller.js"></script>
-<script src="scripts/table.controller.js"></script>
-<script src="scripts/new.table.controller.js"></script>
-<script src="scripts/organization.controller.js"></script>
-<script src="scripts/new.organization.controller.js"></script>
-<script src="scripts/event.controller.js"></script>
-<script src="scripts/receipt.controller.js"></script>
-<script src="scripts/person.services.js"></script>
-<script src="scripts/address.services.js"></script>
-<script src="scripts/organization.services.js"></script>
-<script src="scripts/ticket.services.js"></script>
-<script src="scripts/table.services.js"></script>
-<script src="scripts/pager.services.js"></script>
-<script src="scripts/price.services.js"></script>
-<script src="scripts/event.services.js"></script>
-<script src="scripts/receipt.services.js"></script>
-<script src="scripts/directives.js"></script>
-<script src="scripts/pdfGeneration.service.js"></script>
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+	<title>RMS Donation Manager</title>
+	<script src="scripts/angular.min.js"></script>
+	<script src="scripts/angular-route.js"></script>
+	<script src="scripts/ui-bootstrap-2.5.0.min.js"></script>
+	<script src="scripts/rms.dm.app.js"></script>
+	<script src="scripts/jspdf.min.js"></script>
+	<script src="scripts/person.controller.js"></script>
+	<script src="scripts/new.person.controller.js"></script>
+	<script src="scripts/ticket.controller.js"></script>
+	<script src="scripts/new.ticket.controller.js"></script>
+	<script src="scripts/table.controller.js"></script>
+	<script src="scripts/new.table.controller.js"></script>
+	<script src="scripts/organization.controller.js"></script>
+	<script src="scripts/new.organization.controller.js"></script>
+	<script src="scripts/event.controller.js"></script>
+	<script src="scripts/new.event.controller.js"></script>
+	<script src="scripts/receipt.controller.js"></script>
+	<script src="scripts/person.services.js"></script>
+	<script src="scripts/address.services.js"></script>
+	<script src="scripts/organization.services.js"></script>
+	<script src="scripts/ticket.services.js"></script>
+	<script src="scripts/table.services.js"></script>
+	<script src="scripts/pager.services.js"></script>
+	<script src="scripts/price.services.js"></script>
+	<script src="scripts/event.services.js"></script>
+	<script src="scripts/receipt.services.js"></script>
+	<script src="scripts/directives.js"></script>
+	<script src="scripts/pdfGeneration.service.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 </head>
 <body>
 	<nav class="navbar navbar-inverse">
